# degiro-rs

./: .gitignore  CLAUDE.md  Cargo.toml  portfolio_tmp.json  refactor_plan.md  unexpected_error_analysis.md
code_review/: 2025-07-03_22-52-18_major-architecture-refactor.md
review_request/: 2025-07-03_22-48-20_major-architecture-refactor.md
src/: client.rs  error.rs  http.rs  lib.rs  money.rs  paths.rs  prelude.rs  serde_utils.rs  session.rs  storage.rs  util.rs
src/api/: account.rs  company_profile.rs  company_ratios.rs  curated_lists.rs  financial_statements.rs  login.rs  mod.rs  news.rs  orders.rs  portfolio.rs  product.rs  quotes.rs  search.rs  transactions.rs
src/http/: mod.rs
src/models/: account.rs  company_profile.rs  company_ratios.rs  curated_lists.rs  exchange.rs  financial_reports.rs  mod.rs  money.rs  news.rs  order.rs  period.rs  portfolio.rs  product.rs  product_types.rs  risk.rs  series.rs  transaction.rs
todo/: 02-simplify-abstractions.md  03-advanced-money-refactoring.md  04-internal-currency-conversion.md  code-improvements.md  refactoring-roadmap.md
