[package]
name = "degiro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "charset",
  "json",
  "rustls-tls",
  "cookies",
] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
erfurt = { git = "https://github.com/ribelo/erfurt", optional = true }
leaky-bucket = "1.0"
chronoutil = "0.2"
reqwest_cookie_store = "0.7.0"

[features]
erfurt = ["dep:erfurt"]

[dev-dependencies]
tokio = { version = "1.32.0", features = [
  "rt-multi-thread",
  "sync",
  "macros",
  "fs",
] }
