[package]
name = "degiro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "json",
    "rustls-tls",
    "cookies",
] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
leaky-bucket = "1.0"
chronoutil = "0.2"
reqwest_cookie_store = "0.7.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36"
totp-rs = { version = "5.6.0", features = ["urlencoding"] }
urlencoding = "2.1.3"
base64 = "0.22.1"
base32 = "0.5.1"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.12"
futures-concurrency = "7.6.2"
typed-builder = "0.20.0"
bon = "3.1.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync", "macros"] }
backon = "1.0"
tracing = "0.1"
aes-gcm = "0.10"
dirs = "5.0"
parking_lot = "0.12"
